--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
     <title>爱牧网--小郭宠物用品批发</title>
-    <meta name="keywords" content="Donyle,逗你乐,aluo,aluocn,笑话,阿骆,阿骆精帖网" />
+    <meta name="keywords" content="爱牧网,小郭,宠物,宠物用品" />
     <link rel="stylesheet" href="master.css" type="text/css" media="screen" charset="utf-8"/> 
   </head> 
   <body> 
