--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
     </div> 
     <div id='footer'> 
         <br/>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
-      <br/>Copyright © 2012 http://Donyle.com
+      <br/>Copyright © 2012 http://www.aimuw.com
     </div> 
 
     
