--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
      <div id='content'> 
 <p>小郭手机 1 3 1 3 7 1 2 2 4 8 0</p>
 <p>地址：郑州市陈砦花卉市场宠物区8号、9号</p>
-<p><img src="construction.JPG"></p>
+<p><center><img src="construction.JPG"></center></p>
 <h2>友情链接</h2>
 <p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a></p>
 
