add mail.aimuw.com link
add mail.aimuw.com link

--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 <p>地址：郑州市陈砦花卉市场宠物区8号、9号</p>
 <p><center><img src="construction.JPG"></center></p>
 <h2>友情链接</h2>
-<p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a></p>
+<p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a>&nbsp;<a href="http://mail.aimuw.com" target="_blank">爱牧网邮箱 mail.aimuw.com</a></p>
 
  
         <div class='clearfix'></div> 
