--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
     </div> 
     <div id='footer'> 
         <br/>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
-      <br/><a href="http://www.51.la/?16472508" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/16472508.asp" style="border:none" /></a>
+      <br/><div align="center"></div><a href="http://www.51.la/?16472508" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/16472508.asp" style="border:none" /></a></div>
       <br/>Copyright © 2012 http://www.aimuw.com
     </div> 
 
