--- a/index.htm
+++ b/index.htm
@@ -29,14 +29,14 @@
 <p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a>&nbsp;<a href="http://mail.aimuw.com" target="_blank">爱牧网邮箱 mail.aimuw.com</a></p>
 
  
-        <div class='clearfix'></div> 
+        <div class='clearfix'><div align="center"></div><a href="http://www.51.la/?16472508" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/16472508.asp" style="border:none" /></a></div></div> 
       </div> 
     </div> 
     <div id='footer'> 
         <br/>Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a>.
       <br/>Copyright © 2012 http://www.aimuw.com
     </div> 
-<br/><div align="center"></div><a href="http://www.51.la/?16472508" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/16472508.asp" style="border:none" /></a></div>
+
     
   </body> 
 </html> 
