--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 <p>地址：郑州市陈砦花卉市场宠物区8号、9号</p>
 <p><center><img src="construction.JPG"></center></p>
 <h2>友情链接</h2>
-<p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a>&nbsp;<a href="http://mail.aimuw.com" target="_blank">爱牧网邮箱 mail.aimuw.com</a></p>
+<p><a href="http://www.aimuw.cn" target="_blank">爱牧网 aimuw.cn</a>&nbsp;<a href="http://www.aimuw.cn/amw" target="_blank">爱牧网商城</a>&nbsp;<a href="http://mail.aimuw.com" target="_blank">爱牧网邮箱 mail.aimuw.com</a></p>
 
  
         <div class='clearfix'><div align="center"></div><a href="http://www.51.la/?16472508" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/16472508.asp" style="border:none" /></a></div></div> 
